--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            </div>
          </template>
          <!-- Button to Close Cart History -->
-         <button @click="toggleCartHistory">Close Cart History</button>
+         <!-- <button @click="toggleCartHistory">Close Cart History</button> -->
        </div>
      </template>
    
